fixed element alignment in contact section

--- a/css/brannans.css
+++ b/css/brannans.css
@@ -205,7 +205,7 @@ h4, h5 {
 .phone,
 .facebook {
     font-size: 110%;
-    padding-left: 5.5%;
+    padding-left: 28px;
 }
 hr {
     width: 100%;
